--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
     "compilerOptions": {
       "outDir": "./dist/",
       "noImplicitAny": true,
+      "strictNullChecks": true,
       "module": "ESNext",
       // В какую спецификацию компилируем: для поддержки большинства браузеров
       "target": "es5",
