--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-    "i18n-ally.localesPaths": "./public/locales",
+    "i18n-ally.localesPaths": "public/locales",
     "i18n-ally.keystyle": "nested",
     "css.validate": true,
     "less.validate": false,
@@ -10,6 +10,7 @@
         "scss"
     ],
     "cSpell.words": [
-        "Загрузка"
+        "Загрузка",
+        "найдена"
     ],
 }
