--- a/tsconfig.json
+++ b/tsconfig.json
@@ -35,5 +35,10 @@
       "compilerOptions": {
         "module": "CommonJS"
       }
-    }
+    },
+    "include": [
+      "./config/jest/setupTests.ts",
+      "./src/**/*.ts",
+      "./src/**/*.tsx",
+    ],
 }
