--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,5 +1,4 @@
-name: linting,testing. building
-run-name: ${{ github.actor }} is testing out GitHub Actions 🚀
+name: linting, testing, building
 on:
   push:
     branches: [master]
@@ -14,35 +13,21 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-      - name: Starting Node.js ${{ matrix.node-version }}
-      - uses: actions/setup-node@v1
-      
-    with:
-      node-version: ${{ matrix.node-version }}
+      - name: Staring Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v1
+        with:
+          node-version: ${{ matrix.node-version }}
       - name: install modules
-      run: npm install
+        run: npm install
       - name: build production project
         run: npm run build:prod
-      - name: listing typescript
+      - name: linting typescript
         run: npm run lint:ts
-      - name: listing css
+      - name: linting css
         run: npm run lint:scss
       - name: unit testing
         run: npm run test:unit
-
-  # steps:
-  #  - uses: actions/checkout@v2
-  #  - name: Starting Node.js ${{ matrix.node-version }}
-  #  - uses: actions/setup-node@v1
-  #   with:
-  #     node-version: ${{ matrix.node-version }}
-  #  - name: install modules
-  #    run: npm install
-  #  - name: build production project
-  #    run: npm run build:prod
-  #  - name: listing typescript
-  #    run: npm run lint:ts
-  #  - name: listing css
-  #    run: npm run lint:scss
-  #  - name: unit testing
-  #    run: npm run test:unit
+      - name: build storybook
+        run: npm run storybook:build
+      - name: screenshot testing
+        run: npm run test:ui:ci
