--- a/package.json
+++ b/package.json
@@ -39,9 +39,9 @@
     "@storybook/react": "^6.5.16",
     "@storybook/testing-library": "^0.0.13",
     "@svgr/webpack": "^6.2.1",
-    "@testing-library/jest-dom": "^5.16.2",
+    "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^12.1.3",
-    "@types/jest": "^27.4.1",
+    "@types/jest": "^29.4.0",
     "@types/node": "^17.0.21",
     "@types/react": "^17.0.53",
     "@types/react-dom": "^17.0.11",
@@ -65,7 +65,8 @@
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^27.5.1",
+    "jest": "^29.4.3",
+    "jest-environment-jsdom": "^29.4.3",
     "json-server": "^0.17.1",
     "loki": "^0.31.0",
     "mini-css-extract-plugin": "^2.5.3",
