--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "webpack serve --env port=3000",
     "start:dev": "concurrently \"npm run start\" \"npm run start:dev:server \"",
     "start:dev:server": "node ./json-server/index.js",
-    "build:prod": "webpack --env mode=production",
+    "build:prod": "webpack --env mode=production apiUrl=https://production-project-server-ochre.vercel.app",
     "build:dev": "webpack --env mode=development",
     "lint:ts": "eslint '**/*.{ts,tsx}'",
     "lint:ts:fix": "eslint '**/*.{ts,tsx}' --fix",
@@ -57,6 +57,7 @@
     "@typescript-eslint/parser": "^5.52.0",
     "babel-loader": "^9.1.2",
     "babel-plugin-i18next-extract": "^0.9.0",
+    "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.6.0",
     "eslint": "^8.34.0",
     "eslint-config-standard-with-typescript": "^34.0.0",
