--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,130 +1,130 @@
-name: Linting, testing and building
-on:
-  push:
-    branches: [master]
-    # paths-ignore:
-    #   - '.github/**'
-    #   - '.vscode/**'
-  pull_request:
-    branches: [master]
-    # paths-ignore:
-    #   - '.github/**'
-    #   - '.vscode/**'
-jobs:
-  init-host:
-    name: 1. Load project & Linting
-    runs-on: ubuntu-latest
-    steps:
-      - name: Get repository code
-        uses: actions/checkout@v3
-      - name: Starting Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: 17.4.0
-      - name: Cache Start
-        id: cache-npm
-        uses: actions/cache@v3
-        with:
-          path: node_modules
-          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
-          restore-keys: |
-            ${{ runner.os }}-node-
+# name: Linting, testing and building
+# on:
+#   push:
+#     branches: [master]
+#     # paths-ignore:
+#     #   - '.github/**'
+#     #   - '.vscode/**'
+#   pull_request:
+#     branches: [master]
+#     # paths-ignore:
+#     #   - '.github/**'
+#     #   - '.vscode/**'
+# jobs:
+#   init-host:
+#     name: 1. Load project & Linting
+#     runs-on: ubuntu-latest
+#     steps:
+#       - name: Get repository code
+#         uses: actions/checkout@v3
+#       - name: Starting Node.js
+#         uses: actions/setup-node@v3
+#         with:
+#           node-version: 17.4.0
+#       - name: Cache Start
+#         id: cache-npm
+#         uses: actions/cache@v3
+#         with:
+#           path: node_modules
+#           key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+#           restore-keys: |
+#             ${{ runner.os }}-node-
 
-      - name: Install node modules
-        run: npm ci
+#       - name: Install node modules
+#         run: npm ci
 
-      - name: Linting typescript
-        if: always()
-        run: npm run lint:ts
-      - name: CSS linter
-        if: always()
-        run: npm run lint:scss
+#       - name: Linting typescript
+#         if: always()
+#         run: npm run lint:ts
+#       - name: CSS linter
+#         if: always()
+#         run: npm run lint:scss
 
-  unit-test:
-    name: 2.2 Unit testing
-    needs: init-host
-    runs-on: ubuntu-latest
-    steps:
-      - name: Get repository code
-        uses: actions/checkout@v3
-      - name: Starting Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: 17.4.0
-      - name: Cache Restore
-        id: cache-npm
-        uses: actions/cache/restore@v3
-        with:
-          path: node_modules
-          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
-          restore-keys: |
-            ${{ runner.os }}-node-
-          fail-on-cache-miss: true
-      - name: unit testing
-        run: npm run test:unit
-  screens:
-    name: 2.3 Screenshots testing project
-    needs: init-host
-    runs-on: ubuntu-latest
-    steps:
-      - name: Get repository code
-        uses: actions/checkout@v3
-      - name: Starting Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: 17.4.0
-      - name: Cache Restore
-        id: cache-npm
-        uses: actions/cache/restore@v3
-        with:
-          path: node_modules
-          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
-          restore-keys: |
-            ${{ runner.os }}-node-
-          fail-on-cache-miss: true
-      - name: build storybook
-        if: always()
-        run: npm run storybook:build
-      - name: Screenshot testing
-        if: always()
-        id: screenshots
-        run: npm run test:ui:ci
-      - name: Uploade fail screenshots
-        if: ${{ failure() && steps.screenshots.conclusion == 'failure'}}
-        uses: actions/upload-artifact@v3
-        with:
-          path: '.loki/difference'
-          name: loki-fail-difference
-  build:
-    name: 3. Build production
-    needs:
-      - unit-test
-      - screens
-    runs-on: ubuntu-latest
-    steps:
-      - name: Get repository code
-        uses: actions/checkout@v3
-      - name: Starting Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: 17.4.0
-      - name: Cache Restore
-        id: cache-npm
-        uses: actions/cache/restore@v3
-        with:
-          path: node_modules
-          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
-          restore-keys: |
-            ${{ runner.os }}-node-
-          fail-on-cache-miss: true
-      - name: build production project
-        run: npm run build:prod
-      - name: Upload Artefact
-        uses: actions/upload-artifact@v3
-        with:
-          name: build-files
-          path: build
-      - name: Get build Artefact
-        uses: actions/download-artifact@v3
-        with:
-          name: build-files
+#   unit-test:
+#     name: 2.2 Unit testing
+#     needs: init-host
+#     runs-on: ubuntu-latest
+#     steps:
+#       - name: Get repository code
+#         uses: actions/checkout@v3
+#       - name: Starting Node.js
+#         uses: actions/setup-node@v3
+#         with:
+#           node-version: 17.4.0
+#       - name: Cache Restore
+#         id: cache-npm
+#         uses: actions/cache/restore@v3
+#         with:
+#           path: node_modules
+#           key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+#           restore-keys: |
+#             ${{ runner.os }}-node-
+#           fail-on-cache-miss: true
+#       - name: unit testing
+#         run: npm run test:unit
+#   screens:
+#     name: 2.3 Screenshots testing project
+#     needs: init-host
+#     runs-on: ubuntu-latest
+#     steps:
+#       - name: Get repository code
+#         uses: actions/checkout@v3
+#       - name: Starting Node.js
+#         uses: actions/setup-node@v3
+#         with:
+#           node-version: 17.4.0
+#       - name: Cache Restore
+#         id: cache-npm
+#         uses: actions/cache/restore@v3
+#         with:
+#           path: node_modules
+#           key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+#           restore-keys: |
+#             ${{ runner.os }}-node-
+#           fail-on-cache-miss: true
+#       - name: build storybook
+#         if: always()
+#         run: npm run storybook:build
+#       - name: Screenshot testing
+#         if: always()
+#         id: screenshots
+#         run: npm run test:ui:ci
+#       - name: Uploade fail screenshots
+#         if: ${{ failure() && steps.screenshots.conclusion == 'failure'}}
+#         uses: actions/upload-artifact@v3
+#         with:
+#           path: '.loki/difference'
+#           name: loki-fail-difference
+#   build:
+#     name: 3. Build production
+#     needs:
+#       - unit-test
+#       - screens
+#     runs-on: ubuntu-latest
+#     steps:
+#       - name: Get repository code
+#         uses: actions/checkout@v3
+#       - name: Starting Node.js
+#         uses: actions/setup-node@v3
+#         with:
+#           node-version: 17.4.0
+#       - name: Cache Restore
+#         id: cache-npm
+#         uses: actions/cache/restore@v3
+#         with:
+#           path: node_modules
+#           key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+#           restore-keys: |
+#             ${{ runner.os }}-node-
+#           fail-on-cache-miss: true
+#       - name: build production project
+#         run: npm run build:prod
+#       - name: Upload Artefact
+#         uses: actions/upload-artifact@v3
+#         with:
+#           name: build-files
+#           path: build
+#       - name: Get build Artefact
+#         uses: actions/download-artifact@v3
+#         with:
+#           name: build-files
