--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "webpack serve --env port=3000",
     "start:dev": "concurrently \"npm run start\" \"npm run start:dev:server \"",
     "start:dev:server": "node ./json-server/index.js",
-    "build:prod": "webpack --env mode=production apiUrl=https://production-project-server-ochre.vercel.app",
+    "build:prod": "webpack --env mode=production apiUrl=https://prodserver-ayva2013.b4a.run",
     "build:dev": "webpack --env mode=development",
     "lint:ts": "eslint '**/*.{ts,tsx}'",
     "lint:ts:fix": "eslint '**/*.{ts,tsx}' --fix",
