--- a/package.json
+++ b/package.json
@@ -45,11 +45,12 @@
     "@svgr/webpack": "^6.2.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^12.1.3",
+    "@testing-library/user-event": "^14.4.3",
     "@trivago/prettier-plugin-sort-imports": "^4.1.1",
     "@types/jest": "^29.4.0",
     "@types/node": "^17.0.21",
-    "@types/react": "^17.0.53",
-    "@types/react-dom": "^17.0.11",
+    "@types/react": "^18.0.35",
+    "@types/react-dom": "^18.0.11",
     "@types/react-router-dom": "^5.3.3",
     "@types/react-virtualized": "^9.21.21",
     "@types/webpack": "^5.28.0",
@@ -86,6 +87,7 @@
     "regenerator-runtime": "^0.13.11",
     "sass": "^1.49.9",
     "sass-loader": "^12.6.0",
+    "storybook-addon-mock": "^2.4.1",
     "style-loader": "^3.3.1",
     "stylelint": "^14.5.3",
     "stylelint-config-standard-scss": "^3.0.0",
@@ -105,8 +107,8 @@
     "i18next": "^22.4.9",
     "i18next-browser-languagedetector": "^7.0.1",
     "i18next-http-backend": "^2.1.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-i18next": "^12.1.5",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
