--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.20.12",
+    "@babel/plugin-transform-runtime": "^7.21.4",
+    "@babel/plugin-transform-typescript": "^7.21.3",
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-react": "^7.16.7",
     "@babel/preset-typescript": "^7.16.7",
@@ -47,6 +49,7 @@
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
     "@trivago/prettier-plugin-sort-imports": "^4.1.1",
+    "@types/circular-dependency-plugin": "^5.0.5",
     "@types/jest": "^29.4.0",
     "@types/node": "^17.0.21",
     "@types/react": "^18.0.35",
@@ -59,6 +62,7 @@
     "@typescript-eslint/parser": "^5.52.0",
     "babel-loader": "^9.1.2",
     "babel-plugin-i18next-extract": "^0.9.0",
+    "circular-dependency-plugin": "^5.2.2",
     "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.6.0",
     "eslint": "^8.34.0",
@@ -72,6 +76,7 @@
     "eslint-plugin-ulbi-tv-plugin": "^0.0.10",
     "eslint-plugin-vadim-firulyov-plugin": "^1.0.0",
     "file-loader": "^6.2.0",
+    "fork-ts-checker-webpack-plugin": "^8.0.0",
     "html-webpack-plugin": "^5.5.0",
     "husky": "^8.0.0",
     "identity-obj-proxy": "^3.0.0",
