--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "start:dev": "concurrently \"npm run start\" \"npm run start:dev:server \"",
     "start:dev:vite": "concurrently \"npm run start:vite\" \"npm run start:dev:server \"",
     "start:dev:server": "node ./json-server/index.js",
-    "build:prod": "webpack --env mode=production apiUrl=https://prodserver-ayva2013.b4a.run",
+    "build:prod": "webpack --env mode=production apiUrl=https://prodserver1-ayva2013.b4a.run",
     "build:dev": "webpack --env mode=development",
     "lint:ts": "eslint '**/*.{ts,tsx}'",
     "lint:ts:fix": "eslint '**/*.{ts,tsx}' --fix",
@@ -72,7 +72,7 @@
     "cypress": "^12.11.0",
     "eslint": "^8.34.0",
     "eslint-config-standard-with-typescript": "^34.0.0",
-    "eslint-plugin-fsd-vf": "^1.0.10",
+    "eslint-plugin-fsd-vf": "^2.0.12",
     "eslint-plugin-i18next": "^5.1.2",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-n": "^15.6.1",
