add features flags and script remove feature

--- a/package.json
+++ b/package.json
@@ -142,6 +142,7 @@
     "**/*.{ts,tsx}": "eslint"
   },
   "loki": {
+    "fetchFailIgnore": "^http(.*)$",
     "configurations": {
       "chrome.laptop": {
         "target": "chrome.docker",
